--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
-name: ChestShop
+name: ChestShop-Remastered
 main: de.joo.chestshop.plugin.ChestShop
-version: $4.0-ALPHA
+version: 0.1.0
 author: [Acrobot, dmulloy2, L4BORG, JOO200]
 description: A chest shop for economy plugins.
 depend: [Vault]
-softdepend: [LWC, Lockette, Deadbolt, OddItem, Heroes, SimpleChestLock, Residence]
+softdepend: [LWC, Lockette, Deadbolt, OddItem, Heroes, SimpleChestLock, Residence, ChestShop]
 loadbefore: [WorldGuard]
 
 commands:
